--- a/src/main/resources/templates/kty/partner_regi.html
+++ b/src/main/resources/templates/kty/partner_regi.html
@@ -79,14 +79,10 @@
 						값은 필수입니다.</td>
 				</tr>
 				<tr id="sss">
-					<td class="tang"></td>
-					<td class="tang"></td>
-					<td class="tang">
-					</th>
-					<td class="tang2"><input type="button" id="reg_partner_final"
-						value="파트너 신청하기"></td>
+					
+					<input type="button" id="reg_partner_final"
+						value="파트너 신청하기">
 				</tr>
-				<tr></tr>
 
 			</table>
 		</div>
