--- a/src/main/resources/static/css/kty.css
+++ b/src/main/resources/static/css/kty.css
@@ -361,13 +361,19 @@ a {
 .userinfo_table {
 	position: relative;
 	font-size: 18px;
-	/* 	right: 90px; */
+	/* right: -19px; */
+	/* left: 86px; */
+	padding: 20px;
+	/* background-color: #efefef; */
+	border-radius: 15px;
+	width: 600px;
+	/* box-shadow: 1px 1px 3px #ddd; */
 }
 
 .userinfo_td_gap {
 	white-space: nowrap;
 	position: relative;
-	padding-bottom: 40px;
+	padding-bottom: 10px;
 	/* 아래쪽 간격 크기 조절 */
 	padding-left: 100px;
 	/* 좌측 간격 크기 조절 */
@@ -396,15 +402,19 @@ h5 .nav-link {
 	position: absolute;
 	border: 1px solid grey;
 	top: -20px;
-	width: 200px;
-	height: 50px;
-	background-color: var(--main-color);
+	width: 128px;
+	height: 40px;
+	background-color: #e93c3c;
 	border-radius: 4px;
 	color: #fff;
 	border: none;
 	text-decoration: none;
-	font-size: 16px;
-	font-weight: bold;
+	font-size: 14px;
+	margin: 10px 0;
+	/* font-weight: bold; */
+	float: right;
+	right: 22px;
+	/* margin-left: 264px; */
 }
 
 #confirm_newPwd {
@@ -457,12 +467,21 @@ li.mypage_sidebar a.active {
 	font-weight: bold;
 }
 
-#modify_password_input {
+#modify_password_input{
 	display: none;
+	float: right;
+	left: 300px;
+	/* height: 200px; */
+	position: relative;
+	top: -63px;
 }
 
 #modify_address_input {
 	display: none;
+	left: 300px;
+	/* right: 85px; */
+	position: relative;
+	top: -48px;
 }
 
 .modify_password {
@@ -505,15 +524,30 @@ li.mypage_sidebar a.active {
 
 #modifypassword {
 	position: relative;
-	border: none;
+	/* border: none; */
+	/* border-radius: 4px; */
+	/* background-color: var(--main-color); */
+	/* color: white; */
+	/* width: 200px; */
+	/* height: 50px; */
+	/* font-weight: bold; */
+	/* text-decoration: none; */
+	/* font-size: 16px; */
+	/* position: absolute; */
+	border: 1px solid grey;
+	top: -20px;
+	width: 128px;
+	height: 40px;
+	background-color: #e93c3c;
 	border-radius: 4px;
-	background-color: var(--main-color);
-	color: white;
-	width: 200px;
-	height: 50px;
-	font-weight: bold;
+	color: #fff;
+	border: none;
 	text-decoration: none;
-	font-size: 16px;
+	font-size: 14px;
+	/* margin: 10px 0; */
+	/* font-weight: bold; */
+	float: right;
+	right: 66px;
 }
 
 #modifypassword:hover {
@@ -547,16 +581,20 @@ li.mypage_sidebar a.active {
 }
 
 #modifyaddr {
-	position: relative;
+	border: 1px solid grey;
+	top: -20px;
+	width: 128px;
+	height: 40px;
+	background-color: #e93c3c;
 	border-radius: 4px;
-	background-color: var(--main-color);
-	color: white;
-	width: 200px;
-	height: 50px;
-	font-weight: bold;
+	color: #fff;
 	border: none;
 	text-decoration: none;
-	font-size: 16px;
+	font-size: 14px;
+	/* margin: 10px 0; */
+	/* font-weight: bold; */
+	/* float: right; */
+	right: 66px;
 }
 
 #modify_addr_button {
@@ -589,10 +627,11 @@ li.mypage_sidebar a.active {
 
 td {
 	font-size: 16px;
-	padding: 7px 5px;
+	padding: 2px 5px;
 	color: #232323;
 	height: 35px;
 	padding-top: 2px 17px;
+	/* width: 100%; */
 }
 
 #userdel_confirm_button:hover {
@@ -645,7 +684,7 @@ td {
 	justify-content: center;
 	border-collapse: collapse;
 	bottom: -20px;
-	width: 80vh;
+	width: 800px;
 }
 
 .partner_table-th1 {
@@ -671,13 +710,13 @@ td {
 }
 
 #company_name, #company_address {
-	width: 95%;
+	width: 97%;
 	height: 45px;
 	border: 1px solid rgb(207, 207, 207);
 }
 
 #partner_name, #partner_sectors {
-	width: 80%;
+	width: 90%;
 	height: 45px;
 	border: solid 1px #dddddd;
 	font-size: 14px;
@@ -704,7 +743,12 @@ td {
 	color: #fff;
 	text-decoration: none;
 	font-size: 16px;
+	position: relative;
 	/* font-weight: bold; */
+	float: right;
+	/* bottom: -21px; */
+	top: 380px;
+	right: 141px;
 }
 
 #reg_partner_final:hover {
@@ -719,7 +763,7 @@ td {
 }
 
 #ch_file {
-	width: 95%;
+	width: 97%;
 	display: inline-block;
 	/* 	margin-left: 10px; */
 	/* 오른쪽으로 10px 이동 */
@@ -1025,21 +1069,24 @@ td {
 	/* height: 700px; */
 }
 
-#result_th {
-	height: 50px;
+.result_th {
+	height: 30px;
 	/* background-color: rgb(235, 237, 237); */
 	border-bottom: solid 1px #dddddd;
+	width: 50px;
+	text-align: center;
 }
 
-#sss2, 
-.sss3 {
+#sss2 {
     border-bottom: 1px solid #dddddd;
+    text-align: center;
 }
 
 #result_td {
-	height: 69px;
-	margin-bottom: 30px;
+	height: 50px;
+	/* margin-bottom: 30px; */
 	text-align: center;
+	width: 92px;
 }
 
 #modify_reg_result {
@@ -1186,11 +1233,12 @@ td {
 }
 
 #mypage_partner_reg {
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;  
+    height: 100%;
+    text-wrap: nowrap;
 }
 
 #my_reg_info {
@@ -1284,9 +1332,5 @@ td {
     pointer-events: none;
     opacity: 0.6; /* 이는 선택사항으로 버튼이 비활성화된 것처럼 보이게 만듭니다. */
 }
-
-
-
-
 
 
