--- a/src/main/resources/templates/kty/my_acc_bookList.html
+++ b/src/main/resources/templates/kty/my_acc_bookList.html
@@ -96,7 +96,7 @@
     <span th:each="cancelReq : ${cancleList}"
           th:if="${cancelReq.bookNumValue == book.bookNum && cancelReq.result == '1'}">거절</span>
     <span th:each="cancelReq : ${cancleList}"
-          th:if="${cancelReq.bookNumValue == book.bookNum && book.bookStatus == '예약완료' && cancelReq.result != '1'}">신청중</span>
+          th:if="${cancelReq.bookNumValue == book.bookNum && book.bookStatus == '예약완료' && cancelReq.result != '1'}">처리중</span>
     <span th:each="cancelReq : ${cancleList}" th:if="${cancelReq.bookNumValue == book.bookNum && cancelReq.result != '1' && book.bookStatus != '예약완료'}"></span>
 </td>
 
