--- a/src/main/resources/static/css/result_partner_kty.css
+++ b/src/main/resources/static/css/result_partner_kty.css
@@ -2,11 +2,7 @@
 	color: grey;
 }
 
-td, th {
-/* 	border: 1px solid rgb(205, 205, 205); */
-	padding: 5px;
-	text-align: left;
-}
+td, th {/* 	border: 1px solid rgb(205, 205, 205); */padding: 5px;}
 
 .addProductBtn {
 	margin-top: 2px;
