--- a/src/main/resources/templates/kty/admin_main.html
+++ b/src/main/resources/templates/kty/admin_main.html
@@ -2,148 +2,175 @@
 <html>
 
 <head>
-   <title>관리자 페이지</title>
-   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   <link rel="stylesheet" th:href="@{/css/admin_dashboard.css}">
-   <script th:src="@{/js/admin_dashboard.js}"></script>
-   <style>
-    body {
-        line-height: initial;
-    }
-    .card-body{
-		line-height:1.5;
-	}
+<title>관리자 페이지</title>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+	crossorigin="anonymous">
+<link rel="stylesheet" th:href="@{/css/admin_dashboard.css}">
+<script th:src="@{/js/admin_dashboard.js}"></script>
+<style>
+body {
+	line-height: initial;
+}
+
+.card-body {
+	line-height: 1.5;
+}
 </style>
 </head>
 
 <body class="adminbody">
-   <html layout:decorate="~{khk/adminNavbar}">
-   <div layout:fragment="adminNav" class="container my-3">
-      <h1 id="admin_dashboard_main">DASHBOARD</h1>
-      <div class="container-dash">
-      <div class="dashboard_kkk">
+<html layout:decorate="~{khk/adminNavbar}">
+<div layout:fragment="adminNav" class="container my-3">
+	<h1 id="admin_dashboard_main">DASHBOARD</h1>
+	<div class="container-dash">
+		<div class="dashboard_kkk">
 
 
 
 
 
-         <div class="card bg-primary text-white h-100" id="total_booking_count_kty1">
-            <div class="card-body">
-               <div class="d-flex justify-content-between align-items-center">
-                  <div class="me-3">
-                     <div class="text-white-75 small">금일 (<span th:text="${currentDate}"></span>) 예약 건 수</div>
-                     <div class="text-lg fw-bold"><span id="todayBookingCount"></span><span> 건</span></div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="feather feather-calendar feather-xl text-white-50">
-                     <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+			<div class="card bg-primary text-white h-100"
+				id="total_booking_count_kty1">
+				<div class="card-body">
+					<div class="d-flex justify-content-between align-items-center">
+						<div class="me-3">
+							<div class="text-white-75 small">
+								금일 (<span th:text="${currentDate}"></span>) 예약 건 수
+							</div>
+							<div class="text-lg fw-bold">
+								<span id="todayBookingCount"></span><span> 건</span>
+							</div>
+						</div>
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+							viewBox="0 0 24 24" fill="none" stroke="currentColor"
+							stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+							class="feather feather-calendar feather-xl text-white-50">
+                     <rect x="3" y="4" width="18" height="18" rx="2"
+								ry="2"></rect>
                      <line x1="16" y1="2" x2="16" y2="6"></line>
                      <line x1="8" y1="2" x2="8" y2="6"></line>
                      <line x1="3" y1="10" x2="21" y2="10"></line>
                   </svg>
-               </div>
-            </div>
-         </div>
+					</div>
+				</div>
+			</div>
 
 
-         <div class="card bg-warning text-white h-100" id="total_booking_count_kty2">
-            <div class="card-body">
-               <div class="d-flex justify-content-between align-items-center">
-                  <div class="me-3">
-                     <div class="text-white-75 small">금일 (<span th:text="${currentDate}"></span>)  예약금액 총 액</div>
-                     <div class="text-lg fw-bold"><span id="todayTotalmoney"></span><span> 원</span></div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="feather feather-dollar-sign feather-xl text-white-50">
+			<div class="card bg-warning text-white h-100"
+				id="total_booking_count_kty2">
+				<div class="card-body">
+					<div class="d-flex justify-content-between align-items-center">
+						<div class="me-3">
+							<div class="text-white-75 small">
+								금일 (<span th:text="${currentDate}"></span>) 예약금액 총 액
+							</div>
+							<div class="text-lg fw-bold">
+								<span id="todayTotalmoney"></span><span> 원</span>
+							</div>
+						</div>
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+							viewBox="0 0 24 24" fill="none" stroke="currentColor"
+							stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+							class="feather feather-dollar-sign feather-xl text-white-50">
                      <line x1="12" y1="1" x2="12" y2="23"></line>
-                     <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
-                  </svg>
-               </div>
-            </div>
-
-         </div>
-
-         <div class="card bg-success text-white h-100" id="total_booking_count_kty3">
-            <div class="card-body">
-               <div class="d-flex justify-content-between align-items-center">
-                  <div class="me-3">
-                     <div class="text-white-75 small">금일 (<span th:text="${currentDate}"></span>) 취소 건 수</div>
-                     <div class="text-lg fw-bold"><span id="todayTotaCancle"></span><span> 건</span></div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="feather feather-check-square feather-xl text-white-50">
-                     <polyline points="9 11 12 14 22 4"></polyline>
-                     <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
-                  </svg>
-               </div>
-            </div>
-         </div>
-
-
-
-         <div class="card bg-danger text-white h-100" id="total_booking_count_kty4">
-            <div class="card-body">
-               <div class="d-flex justify-content-between align-items-center">
-                  <div class="me-3">
-                     <div class="text-white-75 small">금일 (<span th:text="${currentDate}"></span>) 취소 건 총 액</div>
-                     <div class="text-lg fw-bold"><span id="todayTotalcal2"></span><span> 원</span></div>
-                  </div>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                     class="feather feather-message-circle feather-xl text-white-50">
                      <path
-                        d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+								d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
+                  </svg>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="card bg-success text-white h-100"
+				id="total_booking_count_kty3">
+				<div class="card-body">
+					<div class="d-flex justify-content-between align-items-center">
+						<div class="me-3">
+							<div class="text-white-75 small">
+								금일 (<span th:text="${currentDate}"></span>) 취소 건 수
+							</div>
+							<div class="text-lg fw-bold">
+								<span id="todayTotaCancle"></span><span> 건</span>
+							</div>
+						</div>
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+							viewBox="0 0 24 24" fill="none" stroke="currentColor"
+							stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+							class="feather feather-check-square feather-xl text-white-50">
+                     <polyline points="9 11 12 14 22 4"></polyline>
+                     <path
+								d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
+                  </svg>
+					</div>
+				</div>
+			</div>
+
+
+
+			<div class="card bg-danger text-white h-100"
+				id="total_booking_count_kty4">
+				<div class="card-body">
+					<div class="d-flex justify-content-between align-items-center">
+						<div class="me-3">
+							<div class="text-white-75 small">
+								금일 (<span th:text="${currentDate}"></span>) 취소 건 총 액
+							</div>
+							<div class="text-lg fw-bold">
+								<span id="todayTotalcal2"></span><span> 원</span>
+							</div>
+						</div>
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+							viewBox="0 0 24 24" fill="none" stroke="currentColor"
+							stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+							class="feather feather-message-circle feather-xl text-white-50">
+                     <path
+								d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
                      </path>
                   </svg>
-               </div>
-            </div>
-         </div>
+					</div>
+				</div>
+			</div>
 
 
 
-         <!--  파이차트 -->
-         <div class="card">
-            <div class="card-header py-3" id="card_head_title1">
-               회원 통계
-            </div>
-            <div class="card-body" id="card2">
-               <canvas id="roleChart"></canvas>
-            </div>
-         </div>
+			<!--  파이차트 -->
+			<div class="card">
+				<div class="card-header py-3" id="card_head_title1">회원 통계</div>
+				<div class="card-body" id="card2">
+					<canvas id="roleChart"></canvas>
+				</div>
+			</div>
 
-      
 
-         <div class="card" id="card5">
-            <div class="card-header py-3" id="card_head_title3">
-               숙소 유형별 통계
-            </div>
-            <div class="card-body" id="card-body_kty">
-               <canvas id="sectorChart"></canvas>
-            </div>
-         </div>
 
-         <div class="card" id="card6">
-            <div class="card-header py-3" id="card_head_title4">
-               주간 방문자 통계
-            </div>
-            <div class="card-body" id="card-body_kty2">
-               <canvas id="lineChart"></canvas>
-            </div>
-         </div>
+			<div class="card" id="card5">
+				<div class="card-header py-3" id="card_head_title3">숙소 유형별 통계
+				</div>
+				<div class="card-body" id="card-body_kty">
+					<canvas id="sectorChart"></canvas>
+				</div>
+			</div>
+
+			<div class="card" id="card6">
+				<div class="card-header py-3" id="card_head_title4">주간 방문자 통계
+				</div>
+				<div class="card-body" id="card-body_kty2">
+					<canvas id="lineChart"></canvas>
+				</div>
+			</div>
 
 
 
 
-      </div>
-   </div>
-   </div>
-   </div>
+		</div>
+	</div>
+</div>
+</div>
 </body>
 
 </html>
