--- a/src/main/resources/templates/kty/find_id.html
+++ b/src/main/resources/templates/kty/find_id.html
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 	<div class="mb-3">
-		<input type="email" class="form-control" id="find_id_email" placeholder="                             이메일 주소 입력"
+		<input type="email" class="form-control" id="find_id_email" placeholder="메일 주소 입력"
 			style="width: 300px;">
 		<div id="email-error">
 
