--- a/src/main/resources/templates/syw/inquiry_list.html
+++ b/src/main/resources/templates/syw/inquiry_list.html
@@ -34,7 +34,7 @@
 					<th>작성일</th>
 					<th>
 						<div
-							style="display: flex; align-items: center; justify-content: space-between;">
+							style="align-items: center; justify-content: space-between;">
 							<span>답변 여부</span>
 					</th>
 
