--- a/src/main/resources/static/css/admin_notice.css
+++ b/src/main/resources/static/css/admin_notice.css
@@ -284,7 +284,7 @@ span.role-ADMIN {
 
 .notice-item {
 	border-bottom: 1px solid #ccc;
-	margin-top: 20px;
+	/* margin-top: 2px; */
 	padding: 8px;
 	cursor: pointer;
 }
