--- a/src/main/resources/static/css/inquiry_answer.css
+++ b/src/main/resources/static/css/inquiry_answer.css
@@ -27,6 +27,7 @@
 		.content-container {
 			margin: 0 auto;
 			max-width: 800px;
+			color: #232323;
 		}
 
 		.inquiry_list {
@@ -41,37 +42,60 @@
 			text-align: center;
 		}
 
+		.inquiryType{
+		margin-bottom: 10px;
+		color: #777777;
+		}
+		
+
+		.inquiry_title{
+		margin-bottom: 10px;
+		font-size: 17px;
+		FONT-WEIGHT: 700;
+		}
+		
+		.inquiry_username{
+		float: right;
+		}
+		.inquiry_answer{
+		text-align: left;
+		}
+
 		.answer_form {
-			/* 답변 입력 칸 스타일 */
+			/* ë‹µë³€ ìž…ë ¥ ì¹¸ ìŠ¤íƒ€ì¼ */
 			margin-top: 20px;
 		}
 
 		.answer_form textarea {
-			width: 790px;
 			height: 300px;
 			padding: 10px;
 			border-radius: 5px;
+			width: 780px;
+			border: solid 1px #ddd;
 		}
 
 		.answer_form input[type="submit"] {
 			margin: 10px auto;
-			padding: 5px 10px;
-			background-color: rgb(255, 128, 128);
-			color: white;
-			border: none;
-			border-radius: 3px;
-			cursor: pointer;
+			/* padding: 5px 10px; */
+			/* background-color: rgb(255, 128, 128); */
+			/* color: white; */
+			/* border: none; */
+			/* border-radius: 3px; */
+			/* cursor: pointer; */
+			float: right;
 		}
 
 		.inquiry-container {
 			background-color: rgb(233, 233, 233);
 			border-radius: 7px;
+			margin: 18px 0;
+			padding: 18px;
 		}
 
 		.answer-container {
 			background-color: rgb(233, 233, 233);
 			border-radius: 7px;
-			margin-bottom: 20px;
+			margin-bottom: 60px;
 		}
 		
 		.notice_btn{
