--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -188,21 +188,21 @@
 
 	<style>
 .money_prive_aver_kty {
-    position: absolute;
-    color: #232323;
-    /* top: 0; */
-    width: 100px;
-    /* left: 170px; */
-    font-weight: 700;
-    /* top: 40px; */
-    width: 100px;
-    /* left: 170px; */
-    bottom: 5px;
-    text-align: right;
-    float: right;
-    margin-left: 148px;
-    font-size: 19px;
-    text-wrap: nowrap;
+	position: absolute;
+	color: #232323;
+	/* top: 0; */
+	width: 100px;
+	/* left: 170px; */
+	font-weight: 700;
+	/* top: 40px; */
+	width: 100px;
+	/* left: 170px; */
+	bottom: 5px;
+	text-align: right;
+	float: right;
+	margin-left: 148px;
+	font-size: 19px;
+	text-wrap: nowrap;
 }
 
 .font_kty_acc_rating {
@@ -290,23 +290,23 @@
 }
 
 .card {
-    /* margin-bottom: 50px; */
-    position: relative;
-    display: inline-block;
-    color: white;
-    background-color: rgb(246, 246, 246);
-    /* padding: 20px; */
-    /* border-radius: 8px; */
-    width: 260px;
-    /* height: 300px; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    white-space: normal;
-    flex-shrink: 0;
-    box-shadow: 1px 1px 4px #b7b7b7;
-    /* border-radius: 5px; */
-    margin-bottom: 10px;
+	/* margin-bottom: 50px; */
+	position: relative;
+	display: inline-block;
+	color: white;
+	background-color: rgb(246, 246, 246);
+	/* padding: 20px; */
+	/* border-radius: 8px; */
+	width: 260px;
+	/* height: 300px; */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	white-space: normal;
+	flex-shrink: 0;
+	box-shadow: 1px 1px 3px #b7b7b7;
+	/* border-radius: 5px; */
+	margin: 5px 0;
 }
 
 .card h2 {
@@ -343,7 +343,7 @@
 	height: 90px;
 	/* margin-top: 113px; */
 	float: inherit;
-/* 	border-radius: 0 0 5px; */
+	/* 	border-radius: 0 0 5px; */
 	margin-bottom: 10px;
 }
 
