--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -241,18 +241,17 @@
 
 .card-container {
 	overflow-y: hidden;
-	/* 	border-radius: 10px; */
-	/* 	margin-left: 80px; */
-	width: 1040px;
-	height: 280px;
-	/* 	margin-top: -50px; */
-	display: flex; /* Use flex to align cards horizontally */
-	gap: 20px;
-	padding-left: 0;
-	overflow-x: scroll; /* Enable horizontal scrolling */
-	scroll-behavior: smooth; /* Add smooth scrolling effect */
-	cursor: grab; /* Change cursor to indicate grabbing */
-	scrollbar-width: none; /* Hide the scrollbar on Firefox */
+    /* border-radius: 10px; */
+    /* margin-left: 80px; */
+    width: 1100px;
+    height: 280px;
+    /* margin-top: -50px; */
+    display: flex;
+    gap: 20px;
+    padding-left: 0;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    cursor: grab;
 	-ms-overflow-style: none; /* Hide the scrollbar on IE/Edge */
 }
 
