--- a/src/main/resources/templates/kdg/success.html
+++ b/src/main/resources/templates/kdg/success.html
@@ -3,58 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>결제 완료</title>
-<style>
-
-	h1 {
-    font-family: "Arial", sans-serif;
-    font-size: 28px;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
-    margin: 20px 0;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  }
-
-  table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-
-  th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-
-  th {
-    background-color: #f2f2f2;
-    font-weight: bold;
-  }
-  
-  /* 버튼 디자인 */
-  
-   #kaobtn2 {
-    background: #fee500;
-    color: #000;
-    border-radius: 12px;
-    padding: 10px 20px;
-    font-family: "Arial", sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  }
-
-  #kaobtn2:hover {
-    background: #ffd900;
-  }
-
-  #kaobtn2:active {
-    background: #ffce00;
-  }
-  
-</style>
+<link rel="stylesheet" href="/css/kdg_success.css">
 </head>
 <body>
 	<!-- jQueryCDN -->
